# multithreading

./: CMakeLists.txt
lab1/: CMakeLists.txt  elapsed_time.txt  entrypoint.cpp  entrypoint.h  generateAB.cpp  matrixA.txt  matrixB.txt  matrix_multiplication.cpp  multmatrix.cpp  multmatrix.h  parallel_simple_matrix_product.cpp  parallel_simple_matrix_product_transposed.cpp  simple_matrix_product.cpp  simple_matrix_product_transposed.cpp  simple_test.txt
lab2/: CMakeLists.txt  coefficients_of_equations.txt  entrypoint.cpp  experiments.txt  generator.cpp  how_to_run.txt  initial_approximations.txt  parallel_jacobi.cpp  result.txt  simple_example.txt
lab3/: CMakeLists.txt  entrypoint.cpp  generator.cpp  input.txt  quicksort.cpp  result.txt
